Fix boolean evaluation to be on correct element, Add heading to new column in table

--- a/pofis/site/templates/suite_overview.html
+++ b/pofis/site/templates/suite_overview.html
@@ -25,6 +25,7 @@
             <tr>
                 <th>#</th>
                 <th>Suite</th>
+                <th>Reference Document</th>
                 <th>Status</th>
             </tr>
             {% for id, suite, status, refdoc_href in suite_data %}
