--- a/pofis/site/templates/suite_overview.html
+++ b/pofis/site/templates/suite_overview.html
@@ -23,8 +23,8 @@
         </table>
         <table align="center">
             <tr>
-                <th>#</th>
-                <th>Suite</th>
+                <th>Section</th>
+                <th>Tutorial</th>
                 <th>Status</th>
             </tr>
             {% for id, suite, status in suite_data %}
