Migrate inline styling to a separate stylesheet

--- a/pofis/site/templates/suite_overview.html
+++ b/pofis/site/templates/suite_overview.html
@@ -2,18 +2,7 @@
 <html>
 <head>
     <title>Interactive Suite List</title>
-    <style>
-    .mainbody {
-        left: 20%;
-        right: 20%;
-    }
-    .status_complete {
-        color: green;
-    }
-    td {
-        align-content: center;
-    }
-    </style>
+    <link rel="stylesheet", type="text/css", href="/styles/suite_overview.css">
 </head>
 <body>
     <div class="mainbody">
