Squashed commit of the following:
commit 3534e48a7b9976507d625f08137bb6299e606813
Author: Samuel Dunn <samuel.i.dunn@wsu.edu>
Date:   Tue Dec 10 17:35:02 2019 -0800

    complete the mass rename. (I think I got everything... )

commit e89b51e73a58ca65b55350b6c7c81a8ce0990ca7
Author: Samuel Dunn <samuel.i.dunn@wsu.edu>
Date:   Tue Dec 10 17:12:22 2019 -0800

    Do a mass rename, contents not yet adjusted.

--- a/pofis/site/templates/tutorial_overview.html
+++ b/pofis/site/templates/tutorial_overview.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interactive Suite List</title>
-    <link rel="stylesheet", type="text/css", href="/styles/suite_overview.css">
+    <title>Interactive Tutorial List</title>
+    <link rel="stylesheet", type="text/css", href="/styles/tutorial_overview.css">
 </head>
 <body>
     <div class="mainbody">
@@ -17,11 +17,11 @@
                 <th>Reference Document</th>
                 <th>Status</th>
             </tr>
-            {% for id, suite, status, refdoc_href in suite_data %}
+            {% for id, tutorial, status, refdoc_href in tutorial_data %}
             <tr>
                 <td>{{ id }}</td>
                 <td>
-                    <a href="/suites/take_suite?suite_num={{ id }}">{{ suite }}</a>
+                    <a href="/tutorials/take_tutorial?tutorial_num={{ id }}">{{ tutorial }}</a>
                 </td>
                 <td>
                     {% if refdoc_href %}
