--- a/pofis/site/templates/tutorial.html
+++ b/pofis/site/templates/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interactive Suite</title>
+    <title>Interactive Tutorial</title>
     <style type="text/css" media="screen">
         #editor {
             position: absolute;
@@ -34,7 +34,7 @@
             $("#submit_button").click(function(event) {
                 $.ajax({
                     type: "POST",
-                    url: "/suites/evaluate?suite_id={{test_id}}",
+                    url: "/tutorials/evaluate?tutorial_id={{tutorial_id}}",
                     data: {user_code: editor.getValue()},
                     success: function(response_obj) {
                         // should the server respond with a success code ([200, 300)),
@@ -45,7 +45,7 @@
                         }
                         else {
                             alert("You passed!\nPress 'Ok' to return to tutorial list.");
-                            window.location.href = "/suites"
+                            window.location.href = "/tutorials"
                         }
 
                     }
@@ -55,7 +55,7 @@
             $("#save_button").click(function(event) {
                 $.ajax({
                     type: "POST",
-                    url: "/suites/save?suite_id={{test_id}}",
+                    url: "/tutorials/save?tutorial_id={{tutorial_id}}",
                     data: {"user_code": editor.getValue()}
                 })
                 .done(function() {
@@ -67,7 +67,7 @@
                 // Ideally this would prompt the user for an 'are you sure' here
                 $.ajax({
                     type: "DELETE",
-                    url: "/suites/delete?suite_id={{test_id}}",
+                    url: "/tutorials/delete?tutorial_id={{tutorial_id}}",
                     success: function() {
                         window.location.reload();
                     }
@@ -78,9 +78,9 @@
 
 </head>
 <body>
-    <div id="editor">{{ testsuite.body }}</div>
+    <div id="editor">{{ tutorial.body }}</div>
     <div id="helpbox">
-        <div>{{ testsuite.help_text }}</div>
+        <div>{{ tutorial.help_text }}</div>
         <br>
         <table align="center">
             <tr>
@@ -90,7 +90,7 @@
         </table>
         <table width="100%">
             <tr><td>
-                <form action="/suites" method="GET">
+                <form action="/tutorials" method="GET">
                 <button id="quit_button" style="width:100%">Quit</button>
                 </form>
             </td></tr>
@@ -106,7 +106,7 @@
     <script>
         var editor = ace.edit("editor");
         editor.setTheme("ace/theme/monokai");
-        editor.session.setMode("ace/mode/{{testsuite.lang}}");
+        editor.session.setMode("ace/mode/{{tutorial.lang}}");
     </script>
 
 </body>
