--- a/pofis/site/templates/suite_overview.html
+++ b/pofis/site/templates/suite_overview.html
@@ -5,9 +5,13 @@
     <link rel="stylesheet", type="text/css", href="/styles/suite_overview.css">
 </head>
 <body>
-    <div class="mainbody">
+    <div class="topmainbody">
         <table align="center">
             <tr><td><h2>Welcome {{username}}!</h2></td></tr>
+        </table>
+    </div>
+    <div class="mainbody">
+        <table align="center">
             <tr><td><h4>Here is the current status of your POFIS progress</h4></td></tr>
         </table>
         <table align="center">
