adding reference doc

--- a/pofis/site/templates/tutorial_overview.html
+++ b/pofis/site/templates/tutorial_overview.html
@@ -6,8 +6,13 @@
 </head>
 <body>
     <div class="topmainbody">
-        <table align="center">
-            <tr><td><h2>Welcome {{username}}!</h2></td></tr>
+        <table width="100%" align="center">
+            <tr>
+                <td align="left"><a href="/">Back to Home</a></td>
+            </tr>
+            <tr width="100%">
+                <td align="center"><h2 align="center">Welcome {{username}}!</h2></td>
+            </tr>
         </table>
     </div>
     <div class="mainbody">
