Use POST so password isn't URL-visible. Fix logic on user/pass validation

--- a/pofis/site/templates/create_user.html
+++ b/pofis/site/templates/create_user.html
@@ -24,7 +24,7 @@
             </tr>
         </table>
         <div class="container2">
-            <form align="center">
+            <form align="center" method="POST">
                 <center>
                     <p>Create an Account</p>
                 </center>
