--- a/pofis/site/templates/401.html
+++ b/pofis/site/templates/401.html
@@ -2,13 +2,21 @@
 <html>
 
 <head>
-    <title>No Really Create an Account</title>
+    <title>No really create an account</title>
     <link rel="stylesheet" , type="text/css" , href="/styles/create_user.css">
 </head>
 
 <body>
-<p> go <a href="/create_user">HERE</a> to create an account</p>
-  
+    <div class="container1">
+        <table width="100%" align="center">
+            <tr>
+                <td align="left" style = "font-family:'Lato'"><a href="/">Back to Home</a></td>
+            </tr>
+        </table>
+    </div>
+    <p align="center" style = "font-family:'Lato'"> To access tutorials, you need an account</p>
+    <p align="center" style = "font-family:'Lato'"> Please go <a href="/create_user">HERE</a> to create one</p>
+
 </body>
 
 </html>
