--- a/pofis/site/templates/tutorial_overview.html
+++ b/pofis/site/templates/tutorial_overview.html
@@ -8,16 +8,16 @@
     <div class="topmainbody">
         <table width="100%" align="center">
             <tr>
-                <td align="left"><a href="/">Back to Home</a></td>
+                <td align="left"><a href="/" class="home">Back to Home</a></td>
             </tr>
-            <tr width="100%">
-                <td align="center"><h2 align="center">Welcome {{username}}!</h2></td>
-            </tr>
+            <div class="row">
+                <td><h2 align="center">Welcome {{username}}!</h2></td>
+            </div>
         </table>
     </div>
     <div class="mainbody">
         <table align="center">
-            <tr><td><h4>Here is the current status of your POFIS progress</h4></td></tr>
+            <td><h4 align="center">Current status of your POFIS progress</h4></td>
         </table>
         <table align="center">
             <tr>
